--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ repositories {
 }
 
 dependencies {
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'org.springframework.boot:spring-boot-starter-web'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile group: 'junit', name: 'junit', version: '4.12'
